# argo-workflows

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: gh-pages.yml
LICENSE/: index.html
charts/: README.md  values-with-repo.yaml  values.yaml
charts/dimsum-argo-workflows/: Chart.yaml
deploy/image/: Dockerfile  README.md
deploy/kubernetes/: README.md  agro-service.yml  artifact-secret.yml
design/mq_api_design/: index.html
design/rest_api_design/: index.html
design/rest_api_spec/: index.html
design/sw_design/: index.html
docker/: index.html
docs/: LICENSE.md  README.md  examples.md  helm_charts.md  installation_manual.md  tutorial_cli.md  tutorial_gui.md  tutorial_rest.md  user_manual.md  workflow_design_manual.md
docs/design/: api_design.md  mq_api_design.md  rest_api_design.md  rest_api_spec.md  sw_design.md
docs/user_manual_resources/: argo_workflow_demo.postman_collection.json
examples/: Argo Workflow Demo.postman_collection.json  README.md  index.html
examples/artifact-consumer/: artifact-consumer-wf-template.yml  artifact-consumer-wf.yml
examples/artifact-consumer2/: artifact-consumer-wf-template.yml  artifact-consumer-wf.yml
examples/dag-complete/: dag-http-wf.yml  dag-wf.yml  (+4 more)
helm_charts/: index.html
installation_manual/: index.html
kubernetes/: index.html
print_page/: index.html
search/: search_index.json
stylesheets/: extra.css
tutorial_cli/: index.html
tutorial_gui/: index.html
tutorial_rest/: index.html
user_manual/: index.html
workflow_design_manual/: index.html
(+16 files in other folders)
