[project]
name = "argo-workflows"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Christophe Noël", email = "christophe.noel@spacebel.be" }]
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.20",
    "mkdocs-print-site-plugin>=2.4.0",
    "mkdocs-render-swagger-plugin>=0.1.1",
    "mkdocs_puml>=0.3.0"  # Add this line
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
